Update frame regeneration logic to prevent issues where onion skins would sometimes not render properly.

BUG:435875